--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
+        parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#dd55aa</item>
+    </style>
+
     <!--    Rounded Corner Image -->
     <style name="roundedCornersImageView" parent="">
         <item name="cornerFamily">rounded</item>
