--- a/app/src/main/res/xml/activity_on_boarding_scene.xml
+++ b/app/src/main/res/xml/activity_on_boarding_scene.xml
@@ -1,17 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:motion="http://schemas.android.com/apk/res-auto">
+<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@id/start"
-        motion:duration="1000">
-       <KeyFrameSet>
-       </KeyFrameSet>
+        android:id="@+id/onboarding_transition"
+        app:constraintSetEnd="@id/end"
+        app:constraintSetStart="@id/start"
+        app:motionInterpolator="easeInOut">
+        <KeyFrameSet>
+
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/skipBtn"
+                android:translationX="0dp" />
+
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/skipBtn"
+                android:translationX="-100dp" />
+
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/nextBtn"
+                android:translationX="0dp" />
+
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/nextBtn"
+                android:translationX="100dp" />
+
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/startBtn"
+                android:translationY="100dp" />
+
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/startBtn"
+                android:translationY="0dp" />
+        </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/start"></ConstraintSet>
+    <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@+id/skipBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationX="0dp" />
 
-    <ConstraintSet android:id="@+id/end"></ConstraintSet>
+        <Constraint
+            android:id="@+id/nextBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationX="0dp" />
+
+        <Constraint
+            android:id="@+id/startBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationY="100dp" />
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/end">
+
+        <Constraint
+            android:id="@id/skipBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationX="-100dp" />
+
+        <Constraint
+            android:id="@id/nextBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationX="100dp" />
+
+        <Constraint
+            android:id="@id/startBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationY="0dp"
+            android:layout_marginBottom="24dp" />
+    </ConstraintSet>
 </MotionScene>
