--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,7 @@
 
     <activity
         android:id="@+id/cameraActivity"
-        android:name="com.nutricatch.dev.views.CameraActivity"
+        android:name="com.nutricatch.dev.views.camera.CameraActivity"
         android:label="activity_camera"
         tools:layout="@layout/activity_camera" />
 </navigation>
