menu navigation-resep

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_recipe"
+        android:icon="@drawable/ic_recipe"
+        android:title="@string/recipes" />
+
+    <item
         android:id="@+id/navigation_camera"
         android:icon="@drawable/ic_camera"
         android:title="@string/camera" />
