--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/nav_notif"
-    tools:context=".views.navigation.settings.SettingsFragment">
+    tools:context=".views.navigation.profile.ProfileFragment">
 
     <TextView
         android:id="@+id/text_notifications"
