--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.navigation.camera.SuccessScanFragment">
+    tools:context=".views.navigation.profile.LanguageFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
