--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,9 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="#bf2758"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             app:expandedTitleGravity="center_vertical"
             app:expandedTitleTextAppearance="@style/ExpandedAppBar"
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             app:title="@string/app_name">
 
             <!--We are adding the image that we have added earlier
@@ -40,8 +39,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"
                 android:background="#bf2758"
+                android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
             <!-- The attribute app:layout_collapseMode="pin" is set so that
@@ -58,6 +57,10 @@
 
     <include
         android:id="@+id/include_content_home"
-        layout="@layout/content_home_fragment" />
+        layout="@layout/content_home_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/appBarLayout"
+        android:layout_gravity="bottom"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
