--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,10 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="ButtonStyle" parent="Base.Theme.NutriCatch">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="cornerRadius">5dp</item>
+    </style>
+
 </resources>
