--- a/app/src/main/res/layout/fragment_body_detail.xml
+++ b/app/src/main/res/layout/fragment_body_detail.xml
@@ -161,10 +161,10 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_update"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/ButtonStyle"
             android:layout_marginTop="24dp"
             android:text="@string/update"
+            app:cornerRadius="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_bmi_name" />
