--- a/app/src/main/res/layout/fragment_body_detail.xml
+++ b/app/src/main/res/layout/fragment_body_detail.xml
@@ -43,13 +43,15 @@
             android:id="@+id/layout_weight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/weight"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_weight">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_my_weight"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:inputType="numberDecimal" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,13 +68,15 @@
             android:id="@+id/layout_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/height"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_height">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_my_height"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:inputType="numberDecimal" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,13 +93,15 @@
             android:id="@+id/layout_age"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/age"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_age">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edt_age"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:inputType="numberDecimal" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -157,7 +163,7 @@
             app:layout_constraintStart_toEndOf="@id/tv_bmi"
             app:layout_constraintTop_toTopOf="@id/tv_bmi"
             tools:text="(Normal)"
-            tools:textColor="#0c0" />
+            tools:textColor="#0a0" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_update"
