--- a/app/src/main/res/layout/setting_item.xml
+++ b/app/src/main/res/layout/setting_item.xml
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_setting" />
+        tools:src="@drawable/ic_setting"
+        app:tint="?attr/colorControlNormal" />
 
     <TextView
         android:id="@+id/tv_setting_title"
