--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,5 +35,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="cornerRadius">5dp</item>
     </style>
+    <style name="Widget.Theme.NutriCatch.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/black_overlay</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    </style>
 
 </resources>
