--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,12 +17,12 @@
 
     <item
         android:id="@+id/navigation_history"
-        android:icon="@drawable/ic_history"
+        android:icon="@drawable/ic_pie"
         android:title="@string/title_history" />
 
     <item
-        android:id="@+id/navigation_setting"
-        android:icon="@drawable/ic_user"
+        android:id="@+id/foodRecommendationFragment"
+        android:icon="@drawable/ic_salad"
         android:title="@string/title_setting" />
 
 </menu>
