--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,11 +18,11 @@
     <item
         android:id="@+id/navigation_history"
         android:icon="@drawable/ic_pie"
-        android:title="@string/title_history" />
+        android:title="@string/my_calories" />
 
     <item
         android:id="@+id/foodRecommendationFragment"
         android:icon="@drawable/ic_salad"
-        android:title="@string/title_setting" />
+        android:title="@string/foods" />
 
 </menu>
