--- a/app/src/main/res/xml/fragment_home_xml_constraintlayout_scene.xml
+++ b/app/src/main/res/xml/fragment_home_xml_constraintlayout_scene.xml
@@ -12,6 +12,13 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="@+id/v_statistic"
+            android:id="@+id/chartCore"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintBottom_toBottomOf="@+id/v_statistic"
+            motion:layout_constraintTop_toTopOf="@+id/v_statistic"
+            motion:layout_editor_absoluteY="128dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
