--- a/app/src/main/res/xml/fragment_home_xml_constraintlayout_scene.xml
+++ b/app/src/main/res/xml/fragment_home_xml_constraintlayout_scene.xml
@@ -19,6 +19,12 @@
             motion:layout_constraintBottom_toBottomOf="@+id/v_statistic"
             motion:layout_constraintTop_toTopOf="@+id/v_statistic"
             motion:layout_editor_absoluteY="128dp" />
+        <Constraint
+            motion:layout_constraintStart_toStartOf="@+id/v_statistic"
+            android:id="@+id/chart"
+            motion:layout_constraintEnd_toEndOf="@+id/v_statistic"
+            motion:layout_constraintBottom_toBottomOf="@+id/v_statistic"
+            motion:layout_constraintTop_toTopOf="@+id/v_statistic" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
