--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,8 @@
         <item name="cornerRadius">5dp</item>
     </style>
 
+    <style name="roundedCornersView">
+        <item name="cornerSize">15%</item>
+    </style>
+
 </resources>
