--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -7,6 +7,7 @@
     tools:context=".views.navigation.camera.CameraActivity">
 
     <androidx.camera.view.PreviewView
+        style="@style/roundedCornersImageView"
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,6 +34,7 @@
         app:layout_constraintStart_toStartOf="@id/viewFinder" />
 
     <com.google.android.material.button.MaterialButton
+        style="@style/ButtonStyle"
         android:id="@+id/btn_retake"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -45,6 +47,7 @@
         tools:visibility="visible" />
 
     <com.google.android.material.button.MaterialButton
+        style="@style/ButtonStyle"
         android:id="@+id/btn_next"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
