--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="80dp"
         app:layoutDescription="@xml/fragment_home_xml_constraintlayout_scene">
 
         <androidx.constraintlayout.widget.ConstraintLayout
